--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,10 +16,10 @@
     <meta property="og:url" content="https://jean-valdivia.github.io/Curso-DW/pages/contacto.html"/>
     <meta property="og:image" content="https://i.postimg.cc/52hT5xcQ/logo-team-ghost-sombra.png"/>
     <meta property="og:description" content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales."/>
-    <title>Contacto - Team Ghost Argentina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <title>Contacto - Team Ghost Argentina</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
             <!--titulo izquierdo-->
             <h1 class="header__h">Team Ghost Argentina</h1>
             <!--imagen central-->
-            <a href="../index.html"><img class="header__img" src="../image/logo team ghost sombra.png" alt="Logo del equipo"></a>
+            <a href="../index.html"><img class="header__img" src="../image/logo_team_ghost_sombra.png" alt="Logo del equipo"></a>
             <!--titulo derecho-->
             <h2 class="header__h">Airsoft Team</h2>
         </section>
