--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../image/icon.ico" type="image/x-icon">
-    <meta name="keywords" content="airsoft, deporte, armas, productos, equipo, team, ghost, argentina, arg, operador, operadores, aire, comprimido, bbs, balines, plasticos, campo, geu, jdg, juegos, experiencia, simulacion, milsim, dinamico, replica, replicas ">
-    <meta name="description" content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales.">
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Team Ghost Argentina"/>
-    <meta property="og:url" content="https://jean-valdivia.github.io/Curso-DW/pages/contacto.html"/>
-    <meta property="og:image" content="https://i.postimg.cc/52hT5xcQ/logo-team-ghost-sombra.png"/>
-    <meta property="og:description" content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales."/>
+    <meta name="keywords"
+        content="airsoft, deporte, armas, productos, equipo, team, ghost, argentina, arg, operador, operadores, aire, comprimido, bbs, balines, plasticos, campo, geu, jdg, juegos, experiencia, simulacion, milsim, dinamico, replica, replicas ">
+    <meta name="description"
+        content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales.">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Team Ghost Argentina" />
+    <meta property="og:url" content="https://jean-valdivia.github.io/Curso-DW/pages/contacto.html" />
+    <meta property="og:image" content="https://i.postimg.cc/52hT5xcQ/logo-team-ghost-sombra.png" />
+    <meta property="og:description"
+        content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales." />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -28,7 +31,8 @@
             <!--titulo izquierdo-->
             <h1 class="header__h">Team Ghost Argentina</h1>
             <!--imagen central-->
-            <a href="../index.html"><img class="header__img" src="../image/logo_team_ghost_sombra.png" alt="Logo del equipo"></a>
+            <a href="../index.html"><img class="header__img" src="../image/logo_team_ghost_sombra.png"
+                    alt="Logo del equipo"></a>
             <!--titulo derecho-->
             <h2 class="header__h">Airsoft Team</h2>
         </div>
@@ -68,14 +72,16 @@
             <p>Si tenes un equipo y queres ponernos a prueba, no dudes en completar el siguiente formulario. Nos
                 contactaremos para definir una fecha de partida.</p>
         </section>
-        <section class="formulario">
+        <form>
             <div>
                 <label for="nombre">Nombre:</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder="Nombre Completo"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"
+                    placeholder="Nombre Completo"></textarea>
             </div>
             <div>
                 <label for="equipo">Equipo al que pertenece (opcional):</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder="Si es que perteneces a uno"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"
+                    placeholder="Si es que perteneces a uno"></textarea>
             </div>
             <div>
                 <label for="telefono">Telefono de contacto:</label>
@@ -87,7 +93,8 @@
             </div>
             <div>
                 <label for="zona">Zona en la que podes jugar:</label>
-                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Escribe para buscar...">
+                <input class="form-control" list="datalistOptions" id="exampleDataList"
+                    placeholder="Escribe para buscar...">
                 <datalist id="datalistOptions">
                     <option value="CABA">
                     <option value="Zona Oeste">
@@ -98,13 +105,14 @@
             </div>
             <div>
                 <label for="comentarios">Comentanos cual es tu plan:</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="O propone algun plan..."></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
+                    placeholder="O propone algun plan..."></textarea>
             </div>
             <div>
                 <input type="submit">
                 <input type="reset">
             </div>
-        </section>
+        </form>
     </main>
     <footer>
         <div>
